@@ -1,6 +1,6 @@
 plugins {
     // Apply the Kotlin JVM plugin to add support for Kotlin on the JVM.
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.31'
 
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
@@ -24,6 +24,9 @@ sourceSets {
 // Define the main class for the application.
 mainClassName = 'MainKt'
 dependencies {
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.31"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // Use the Kotlin JDK 8 standard library.
@@ -35,11 +38,23 @@ dependencies {
     // Use the Kotlin JUnit integration.
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
 }
+
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "12"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "12"
+}
+
+
+test {
+    jvmArgs(['--enable-preview'])
 }
 subprojects {
     dependencies {
